# opengl_playground

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: clean_and_build.sh  clean_only.sh  make_and_run_debug_x86_64.sh  make_and_run_release_x86_64.sh  valgrind_run_debug_x86_64.sh
shaders/: basic.shader
src/: CMakeLists.txt  square.cc  triangle.cc
